--- a/src/app/component/stats/stats.component.css
+++ b/src/app/component/stats/stats.component.css
@@ -1,162 +1,92 @@
 body{
-  background:#eee;
+  margin-top:20px;
+  background-color: #f7f7ff;
+}
+.radius-10 {
+  border-radius: 10px !important;
 }
 
-.card-box {
+.border-info {
+  border-left: 5px solid  #0dcaf0 !important;
+}
+.border-danger {
+  border-left: 5px solid  #fd3550 !important;
+}
+.border-success {
+  border-left: 5px solid  #15ca20 !important;
+}
+.border-warning {
+  border-left: 5px solid  #ffc107 !important;
+}
+
+
+.card {
   position: relative;
-  color: #fff;
-  padding: 20px 10px 40px;
-  margin: 20px 0px;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: .25rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
 }
-.card-box:hover {
-  text-decoration: none;
-  color: #f1f1f1;
+.bg-gradient-scooter {
+  background: #17ead9;
+  background: -webkit-linear-gradient(
+    45deg
+    , #17ead9, #6078ea)!important;
+  background: linear-gradient(
+    45deg
+    , #17ead9, #6078ea)!important;
 }
-.card-box:hover .icon i {
-  font-size: 100px;
-  transition: 1s;
-  -webkit-transition: 1s;
-}
-.card-box .inner {
-  padding: 5px 10px 0 10px;
-}
-.card-box h3 {
+.widgets-icons-2 {
+  width: 56px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ededed;
   font-size: 27px;
-  font-weight: bold;
-  margin: 0 0 8px 0;
-  white-space: nowrap;
-  padding: 0;
-  text-align: left;
+  border-radius: 10px;
 }
-.card-box p {
-  font-size: 15px;
+.rounded-circle {
+  border-radius: 50%!important;
 }
-.card-box .icon {
-  position: absolute;
-  top: auto;
-  bottom: 5px;
-  right: 5px;
-  z-index: 0;
-  font-size: 72px;
-  color: rgba(0, 0, 0, 0.15);
+.text-white {
+  color: #fff!important;
 }
-.card-box .card-box-footer {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  text-align: center;
-  padding: 3px 0;
-  color: rgba(255, 255, 255, 0.8);
-  background: rgba(0, 0, 0, 0.1);
-  width: 100%;
-  text-decoration: none;
+.ms-auto {
+  margin-left: auto!important;
 }
-.card-box:hover .card-box-footer {
-  background: rgba(0, 0, 0, 0.3);
-}
-.bg-blue {
-  background-color: #00c0ef !important;
-}
-.bg-green {
-  background-color: #00a65a !important;
-}
-.bg-orange {
-  background-color: #f39c12 !important;
-}
-.bg-red {
-  background-color: #d9534f !important;
+.bg-gradient-bloody {
+  background: #f54ea2;
+  background: -webkit-linear-gradient(
+    45deg
+    , #f54ea2, #ff7676)!important;
+  background: linear-gradient(
+    45deg
+    , #f54ea2, #ff7676)!important;
 }
 
+.bg-gradient-ohhappiness {
+  background: #00b09b;
+  background: -webkit-linear-gradient(
+    45deg
+    , #00b09b, #96c93d)!important;
+  background: linear-gradient(
+    45deg
+    , #00b09b, #96c93d)!important;
+}
 
-/*body{*/
-/*  margin-top:20px;*/
-/*  background-color: #f7f7ff;*/
-/*}*/
-/*.radius-10 {*/
-/*  border-radius: 10px !important;*/
-/*}*/
-
-/*.border-info {*/
-/*  border-left: 5px solid  #0dcaf0 !important;*/
-/*}*/
-/*.border-danger {*/
-/*  border-left: 5px solid  #fd3550 !important;*/
-/*}*/
-/*.border-success {*/
-/*  border-left: 5px solid  #15ca20 !important;*/
-/*}*/
-/*.border-warning {*/
-/*  border-left: 5px solid  #ffc107 !important;*/
-/*}*/
-
-
-/*.card {*/
-/*  position: relative;*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  min-width: 0;*/
-/*  word-wrap: break-word;*/
-/*  background-color: #fff;*/
-/*  background-clip: border-box;*/
-/*  border: 0px solid rgba(0, 0, 0, 0);*/
-/*  border-radius: .25rem;*/
-/*  margin-bottom: 1.5rem;*/
-/*  box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);*/
-/*}*/
-/*.bg-gradient-scooter {*/
-/*  background: #17ead9;*/
-/*  background: -webkit-linear-gradient(*/
-/*    45deg*/
-/*    , #17ead9, #6078ea)!important;*/
-/*  background: linear-gradient(*/
-/*    45deg*/
-/*    , #17ead9, #6078ea)!important;*/
-/*}*/
-/*.widgets-icons-2 {*/
-/*  width: 56px;*/
-/*  height: 56px;*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*  background-color: #ededed;*/
-/*  font-size: 27px;*/
-/*  border-radius: 10px;*/
-/*}*/
-/*.rounded-circle {*/
-/*  border-radius: 50%!important;*/
-/*}*/
-/*.text-white {*/
-/*  color: #fff!important;*/
-/*}*/
-/*.ms-auto {*/
-/*  margin-left: auto!important;*/
-/*}*/
-/*.bg-gradient-bloody {*/
-/*  background: #f54ea2;*/
-/*  background: -webkit-linear-gradient(*/
-/*    45deg*/
-/*    , #f54ea2, #ff7676)!important;*/
-/*  background: linear-gradient(*/
-/*    45deg*/
-/*    , #f54ea2, #ff7676)!important;*/
-/*}*/
-
-/*.bg-gradient-ohhappiness {*/
-/*  background: #00b09b;*/
-/*  background: -webkit-linear-gradient(*/
-/*    45deg*/
-/*    , #00b09b, #96c93d)!important;*/
-/*  background: linear-gradient(*/
-/*    45deg*/
-/*    , #00b09b, #96c93d)!important;*/
-/*}*/
-
-/*.bg-gradient-blooker {*/
-/*  background: #ffdf40;*/
-/*  background: -webkit-linear-gradient(*/
-/*    45deg*/
-/*    , #ffdf40, #ff8359)!important;*/
-/*  background: linear-gradient(*/
-/*    45deg*/
-/*    , #ffdf40, #ff8359)!important;*/
-/*}*/
+.bg-gradient-blooker {
+  background: #ffdf40;
+  background: -webkit-linear-gradient(
+    45deg
+    , #ffdf40, #ff8359)!important;
+  background: linear-gradient(
+    45deg
+    , #ffdf40, #ff8359)!important;
+}
